--- a/css.css
+++ b/css.css
@@ -16,6 +16,12 @@ body{
     flex-direction: column;
 }
 
+input{
+	font-family: Aclonica;
+	font-size: 20px;
+	padding-top: 2px;
+}
+
 #gameWrapper{
     background-color: brown;
     border: 2px solid #303030;
