--- a/css.css
+++ b/css.css
@@ -14,6 +14,7 @@ body{
 .wrapper{
     display: flex;
     flex-direction: column;
+	justify-content: space-between;
 }
 
 input{
@@ -23,6 +24,6 @@ input{
 }
 
 #gameWrapper{
-    background-color: brown;
+    background-color: #EEEEEE;
     border: 2px solid #303030;
 }
